banner bg added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,16 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main class="container mx-auto">
+      <!-- banner section -->
+      <section class="h-[550px] bg-[#12132d] rounded-xl mt-8">
+        <div
+          class="h-[550px] bg-no-repeat bg-bottom bg-contain object-contain"
+          style="background-image: url('./images/bgbanner.png')"
+        ></div>
+      </section>
+      <!-- banner section ends -->
+    </main>
     <footer></footer>
     <script src="./js/app.js"></script>
   </body>
