banner text done

--- a/index.html
+++ b/index.html
@@ -65,11 +65,59 @@
     </header>
     <main class="container mx-auto">
       <!-- banner section -->
-      <section class="h-[550px] bg-[#12132d] rounded-xl mt-8">
+      <section class="h-[550px] bg-[#12132d] rounded-3xl my-8">
         <div
           class="h-[550px] bg-no-repeat bg-bottom bg-contain object-contain"
           style="background-image: url('./images/bgbanner.png')"
-        ></div>
+        >
+          <div class="flex justify-center items-center h-full">
+            <div class="flex justify-between items-center min-w-full p-20">
+              <div class="space-y-5">
+                <h1 class="text-7xl leading-[86px] text-white font-bold">
+                  Welcome to the <br />
+                  <span
+                    class="bg-gradient-to-r from-[#797DFC]/90 to-[#797DFC]/30 bg-clip-text text-transparent"
+                    >HotNews</span
+                  >
+                  Forum
+                </h1>
+                <p class="text-white/80">
+                  Share your favorite opinion and win and wp forum coffee mug!
+                </p>
+                <label
+                  class="input input-bordered flex items-center gap-2 rounded-full"
+                >
+                  <input type="text" class="grow" placeholder="Search" />
+                  <button
+                    class="btn bg-blue-400 hover:bg-blue-500 rounded-full text-white"
+                  >
+                    Search
+                  </button>
+                </label>
+              </div>
+              <div
+                class="bg-white max-h-fit p-6 md:min-w-64 space-y-3 rounded-md"
+              >
+                <div class="flex justify-between">
+                  <p>Registered Users</p>
+                  <span>02</span>
+                </div>
+                <div class="flex justify-between">
+                  <p>Forum</p>
+                  <span>06</span>
+                </div>
+                <div class="flex justify-between">
+                  <p>Topics</p>
+                  <span>01</span>
+                </div>
+                <div class="flex justify-between">
+                  <p>Replies</p>
+                  <span>03</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- banner section ends -->
     </main>
