--- a/index.html
+++ b/index.html
@@ -120,6 +120,28 @@
         </div>
       </section>
       <!-- banner section ends -->
+      <!-- discus area -->
+      <section class="my-8">
+        <div class="text-center space-y-4">
+          <h2 class="text-3xl font-bold">Let's Discuss</h2>
+          <p>
+            Yes, you can run unit tests and view the results directly within the
+            app. The integrated testing features allow for a streamlined .
+          </p>
+        </div>
+        <!-- discuss main content area -->
+        <div class="content-area flex justify-between mt-8">
+          <div class="flex-1"></div>
+          <div class="min-w-96 bg-[#12132D]/5 p-5 rounded-lg">
+            <div class="flex justify-between">
+              <h4>Title</h4>
+              <p>Mark as read ( <span id="read-count">4</span> )</p>
+            </div>
+          </div>
+        </div>
+        <!-- discuss main content area ends-->
+      </section>
+      <!-- discus area ends -->
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
