join our forum done

--- a/index.html
+++ b/index.html
@@ -186,11 +186,46 @@
               <h4>Title</h4>
               <p>Mark as read ( <span id="read-count">4</span> )</p>
             </div>
+            <div id="show-reding-content" class="mt-6">
+              <div class="bg-white p-5 rounded-lg flex justify-betweent gap-3">
+                <p class="font-medium max-w-xs break-words">
+                  10 Kids Unaware of Their Halloween Costume
+                </p>
+                <span class="space-x-2 text-[#12132D99]">
+                  <i class="fa-regular fa-eye"></i>
+                  <span>1240</span>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
         <!-- discuss main content area ends-->
       </section>
       <!-- discus area ends -->
+      <!-- join our forum -->
+      <section class="my-16">
+        <div class="bg-[#12132D] rounded-3xl px-16 py-5">
+          <div class="flex justify-between items-center gap-6">
+            <div class="space-y-6">
+              <h1 class="text-4xl text-white">Join Our Forum</h1>
+              <p class="text-white/80 max-w-xl">
+                Share your favorite opinion and win and wp forum coffee mug!
+                Yes, you can run unit tests and view the results directly within
+                the app.
+              </p>
+              <button
+                class="btn bg-blue-400 hover:bg-blue-500 rounded-full text-white border-0"
+              >
+                Register Now
+              </button>
+            </div>
+            <div>
+              <img src="./images/joinforum.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- join our forum ends -->
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
