--- a/index.html
+++ b/index.html
@@ -131,57 +131,8 @@
         </div>
         <!-- discuss main content area -->
         <div class="content-area flex justify-between mt-8 gap-6">
-          <div class="flex-1">
-            <div class="flex justify-between bg-[#797DFC1A] rounded-lg p-6">
-              <div class="indicator">
-                <span class="indicator-item badge bg-green-600"></span>
-                <figure class="">
-                  <div class="avatar">
-                    <div class="w-24 rounded-xl">
-                      <img
-                        src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp"
-                      />
-                    </div>
-                  </div>
-                </figure>
-              </div>
-
-              <div class="card-body py-0">
-                <div class="flex gap-7 font-medium">
-                  <span># <span id="category">Music</span></span>
-                  <span>Author: <span id="category">Awlad Hossain</span></span>
-                </div>
-                <h2 class="card-title">New movie is released!</h2>
-                <p>Click the button to watch on Jetflix app.</p>
-                <div class="my-3">
-                  <hr class="border-dashed border-2" />
-                </div>
-                <div class="flex justify-between items-center">
-                  <div class="space-x-6 text-[#12132D99] font-medium">
-                    <span class="space-x-2">
-                      <i class="fa-regular fa-message text-lg"></i>
-                      <span>560</span></span
-                    >
-                    <span class="space-x-2"
-                      ><i class="fa-regular fa-eye"></i> <span>1240</span></span
-                    >
-                    <span class="space-x-2">
-                      <i class="fa-regular fa-clock text-lg"></i>
-                      <span>5</span> min</span
-                    >
-                  </div>
-                  <div class="">
-                    <button
-                      class="bg-[#10B981] hover:bg-[#269772] text-white rounded-full text-lg size-8"
-                    >
-                      <i class="fa-solid fa-envelope-open text-lg"></i>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="min-w-96 bg-[#12132D]/5 p-5 rounded-lg">
+          <div id="post-container" class="flex-1 space-y-5"></div>
+          <div class="min-w-96 max-h-fit bg-[#12132D]/5 p-5 rounded-lg">
             <div class="flex justify-between">
               <h4>Title</h4>
               <p>Mark as read ( <span id="read-count">4</span> )</p>
