loading spinner added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
         <!-- discuss main content area ends-->
       </section>
       <!-- discus area ends -->
+      <!-- loading spinner -->
+      <section
+        onclick="handleLoading()"
+        id="spinner"
+        class="flex justify-center hidden"
+      >
+        <span class="loading loading-spinner loading-lg"></span>
+      </section>
+      <!-- loading spinner ends -->
       <!-- join our forum -->
       <section class="my-16">
         <div class="bg-[#12132D] rounded-3xl px-16 py-5">
